# CodebaseCSI

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  scan_report_v2.json  scan_report_v3.json
.github/workflows/: ci.yml  publish.yml
docs/official/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
examples/: README.md  scan_and_report.py
ide-integration/vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
ide-integration/vscode-extension/src/: codeActions.ts  commands.ts  diagnostics.ts  extension.ts  statusBar.ts  treeView.ts
ml-integration/: .gitignore  ml_detector.py  requirements-ml.txt
ml-integration/data_collection/: collect_data.py
ml-integration/examples/: integration_example.py
ml-integration/training/: train_model.py
src/codebase_csi/: __init__.py  __main__.py
src/codebase_csi/analyzers/: __init__.py  antipattern_analyzer.py  architectural_analyzer.py  comment_analyzer.py  dev_doc_analyzer.py  emoji_detector.py  mock_detector.py  pattern_analyzer.py  security_analyzer.py  semantic_analyzer.py  statistical_analyzer.py
src/codebase_csi/cli/: __init__.py  main.py
src/codebase_csi/core/: __init__.py  detector.py  models.py  report_generator.py
src/codebase_csi/enterprise/: __init__.py
src/codebase_csi/parsers/: __init__.py  ast_parser.py
src/codebase_csi/utils/: __init__.py  file_utils.py  logger.py  quick_improvements.py
src/codebase_csi/verticals/: __init__.py
tests/: test_antipattern_analyzer.py  test_ast_parser.py  test_basic.py  test_comment_analyzer.py  test_dev_doc_analyzer.py  test_emoji_detection.py  test_file_scanning.py  test_language_detection.py  test_mock_detector.py  test_pattern_analyzer.py  test_security_analyzer.py  test_statistical_analyzer.py
tests/fixtures/: example_ai_code.py
tools/: test_report_generation.py
