[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-csi"
version = "1.1.0"
description = "Enterprise-grade AI code detection with OWASP security scanning - 80%+ accuracy, 72 languages, zero dependencies"
readme = "README.md"
authors = [
    {name = "Codebase CSI Team", email = "contact@codebase-csi.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
    "Topic :: Software Development :: Bug Tracking",
]
keywords = [
    "ai-detection",
    "security-scanner",
    "owasp",
    "code-quality",
    "static-analysis",
    "vulnerability-detection",
    "sql-injection",
    "csi",
    "forensics",
    "pattern-detection",
    "enterprise",
    "ci-cd",
    "devops",
    "research-backed"
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
yaml = [
    "PyYAML>=6.0",
]
enterprise = [
    "PyYAML>=6.0",
    "jinja2>=3.1.0",
]
all = [
    "codebase-csi[dev,yaml,enterprise]",
]

[project.urls]
Homepage = "https://github.com/codebase-csi/codebase-csi"
Documentation = "https://codebase-csi.readthedocs.io"
Repository = "https://github.com/codebase-csi/codebase-csi"
"Bug Tracker" = "https://github.com/codebase-csi/codebase-csi/issues"

[project.scripts]
codebase-csi = "codebase_csi.cli.main:main"
csi = "codebase_csi.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["codebase_csi*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=codebase_csi",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
